--- a/package.json
+++ b/package.json
@@ -7,22 +7,27 @@
     "dev": "webpack serve --mode development",
     "build": "webpack --mode production"
   },
-  "keywords": ["monaco", "gherkin", "editor"],
+  "keywords": [
+    "monaco",
+    "gherkin",
+    "editor"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "monaco-editor": "^0.27.0",
-    "@cucumber/monaco": "^0.0.1"
+    "@cucumber/monaco": "^0.0.1",
+    "monaco-editor": "^0.27.0"
   },
   "devDependencies": {
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.6.0",
+    "process": "^0.11.10",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "util": "^0.12.5",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "html-webpack-plugin": "^5.6.0",
-    "typescript": "^5.3.3",
-    "ts-loader": "^9.5.1",
-    "css-loader": "^6.8.1",
-    "style-loader": "^3.3.3"
+    "webpack-dev-server": "^4.15.1"
   }
 }
-
