--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "license": "MIT",
   "dependencies": {
     "@cucumber/monaco": "^0.0.1",
+    "ansi_up": "^6.0.6",
     "monaco-editor": "^0.27.0"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.6.0",
     "process": "^0.11.10",
