--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "name": "monaco-gherkin-editor",
   "version": "1.0.0",
-  "description": "Monaco Editor with Gherkin syntax support",
-  "main": "index.js",
+  "description": "Production-ready Monaco Editor with Gherkin syntax support and Java Cucumber integration",
+  "main": "dist/main.js",
   "scripts": {
     "dev": "webpack serve --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "extract": "node scripts/extract-steps.js"
   },
   "keywords": [
-    "monaco",
+    "monaco-editor",
     "gherkin",
+    "cucumber",
+    "bdd",
+    "testing",
     "editor"
   ],
   "author": "",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Saksham1970/monaco-gherkin.git"
+  },
   "dependencies": {
     "@cucumber/monaco": "^0.0.1",
     "ansi_up": "^6.0.6",
@@ -21,15 +29,13 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^13.0.1",
-    "css-loader": "^6.8.1",
-    "html-webpack-plugin": "^5.6.0",
-    "process": "^0.11.10",
-    "style-loader": "^3.3.3",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.3.3",
-    "util": "^0.12.5",
-    "webpack": "^5.90.0",
+    "css-loader": "^6.11.0",
+    "html-webpack-plugin": "^5.6.5",
+    "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.4",
+    "typescript": "^5.9.3",
+    "webpack": "^5.103.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.2"
   }
 }
