--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^6.11.0",
     "html-webpack-plugin": "^5.6.5",
+    "process": "^0.11.10",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.4",
     "typescript": "^5.9.3",
+    "util": "^0.12.5",
     "webpack": "^5.103.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.2"
