--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
   "build": {
     "appId": "com.saksham.monaco-gherkin",
     "productName": "Monaco Gherkin Editor",
+    "directories": {
+      "buildResources": "assets"
+    },
     "files": [
       "dist/**/*",
       "electron/**/*",
@@ -75,7 +78,6 @@
     ],
     "win": {
       "target": "nsis",
-      "icon": "assets/icon.ico",
       "verifyUpdateCodeSignature": false
     },
     "nsis": {
